--- a/estoque_bebidas/templates/base.html
+++ b/estoque_bebidas/templates/base.html
@@ -27,6 +27,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'movimentação_estoque_list' %}"><i class="bi bi-arrow-left-right"></i> Movimentações</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'stock_report' %}"><i class="bi bi-clipboard-data"></i> Relatório de Estoque</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'critical_stock_report' %}"><i class="bi bi-exclamation-triangle"></i> Estoque Crítico</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'abc_curve_report' %}"><i class="bi bi-bar-chart"></i> Curva ABC</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right"></i> Sair</a></li>
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}"><i class="bi bi-box-arrow-in-right"></i> Login</a></li>
@@ -49,7 +50,7 @@
         {% endblock %}
     </div>
     <footer class="footer">
-        <p>&copy; 2025 Adega+ - Todos os direitos reservados</p>
+        <p>© 2025 Adega+ - Todos os direitos reservados</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
