--- a/estoque_bebidas/templates/produto_form.html
+++ b/estoque_bebidas/templates/produto_form.html
@@ -1,9 +1,39 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Cadastrar Produto</h2>
-<form method="post">
+<form method="post" class="row g-3">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Salvar</button>
+    <div class="col-md-6">
+        <label for="{{ form.nome.id_for_label }}" class="form-label">Nome</label>
+        {{ form.nome }}
+    </div>
+    
+    <div class="col-md-6">
+        <label for="{{ form.volumetria.id_for_label }}" class="form-label">Embalagem</label>
+        {{ form.volumetria }}
+    </div>
+    <div class="col-md-12">
+        <label for="{{ form.descricao.id_for_label }}" class="form-label">Descrição</label>
+        {{ form.descricao }}
+    </div>
+    <div class="col-md-6">
+        <label for="{{ form.categoria.id_for_label }}" class="form-label">Categoria</label>
+        {{ form.categoria }}
+    </div>
+    <div class="col-md-6">
+        <label for="{{ form.preco.id_for_label }}" class="form-label">Preço</label>
+        {{ form.preco }}
+    </div>
+    <div class="col-md-6">
+        <label for="{{ form.estoque_minimo.id_for_label }}" class="form-label">Estoque Mínimo</label>
+        {{ form.estoque_minimo }}
+    </div>
+    <div class="col-md-12">
+        <label for="{{ form.id_fornecedor.id_for_label }}" class="form-label">Fornecedor</label>
+        {{ form.id_fornecedor }}
+    </div>
+    <div class="col-12 mt-3">
+        <button type="submit" class="btn btn-primary">Salvar</button>
+    </div>
 </form>
 {% endblock %}
