--- a/estoque_bebidas/templates/base.html
+++ b/estoque_bebidas/templates/base.html
@@ -11,29 +11,43 @@
     <link rel="stylesheet" href="{% static 'css/estilo_adega.css' %}">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'dashboard' %}">Adega+</a>
+            <a class="navbar-brand" href="{% url 'dashboard' %}">Adega +</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     {% if user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'produto_list' %}"><i class="bi bi-box"></i> Produtos</a></li>
-                        {% if user.papel == 'Proprietario' or user.papel == 'Gerente' %}
-                            <li class="nav-item"><a class="nav-link" href="{% url 'fornecedor_list' %}"><i class="bi bi-truck"></i> Fornecedores</a></li>
-                        {% endif %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'movimentação_estoque_list' %}"><i class="bi bi-arrow-left-right"></i> Movimentações</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'stock_report' %}"><i class="bi bi-clipboard-data"></i> Relatório de Estoque</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'critical_stock_report' %}"><i class="bi bi-exclamation-triangle"></i> Estoque Crítico</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'abc_curve_report' %}"><i class="bi bi-bar-chart"></i> Curva ABC</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right"></i> Sair</a></li>
-                    {% else %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}"><i class="bi bi-box-arrow-in-right"></i> Login</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}"><i class="bi bi-person-plus"></i> Registrar</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'produto_list' %}">Produtos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'fornecedor_list' %}">Fornecedores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'movimentação_estoque_list' %}">Movimentações</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Relatórios
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="{% url 'stock_report' %}">Estoque Atual</a></li>
+                            <li><a class="dropdown-item" href="{% url 'critical_stock_report' %}">Estoque Crítico</a></li>
+                            <li><a class="dropdown-item" href="{% url 'validity_report' %}">Validade de Produto</a></li>
+                            <li><a class="dropdown-item" href="{% url 'abc_curve_report' %}">Curva ABC</a></li>
+                        </ul>
+                    </li>
                     {% endif %}
                 </ul>
+                {% if user.is_authenticated %}
+                <span class="navbar-text me-3">Bem-vindo, {{ user.username }}</span>
+                <a class="btn btn-outline-light" href="{% url 'logout' %}">Sair</a>
+                {% else %}
+                <a class="btn btn-outline-light" href="{% url 'login' %}">Entrar</a>
+                {% endif %}
             </div>
         </div>
     </nav>
@@ -50,7 +64,7 @@
         {% endblock %}
     </div>
     <footer class="footer">
-        <p>© 2025 Adega+ - Todos os direitos reservados</p>
+        <p>© 2025 Adega+ Todos os direitos reservados</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
