--- a/estoque_bebidas/templates/produto_form.html
+++ b/estoque_bebidas/templates/produto_form.html
@@ -1,18 +1,27 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Cadastrar Produto</h2>
+<h2 class="mb-4">{% if produto %}Editar Produto{% else %}Cadastrar Produto{% endif %}</h2>
 <form method="post" class="row g-3">
     {% csrf_token %}
+    {% if form.errors %}
+        <div class="alert alert-danger">
+            <ul>
+                {% for field in form %}
+                    {% for error in field.errors %}
+                        <li>{{ field.label }}: {{ error }}</li>
+                    {% endfor %}
+                {% endfor %}
+                {% for error in form.non_field_errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
     <div class="col-md-6">
         <label for="{{ form.nome.id_for_label }}" class="form-label">Nome</label>
         {{ form.nome }}
     </div>
-    
     <div class="col-md-6">
-        <label for="{{ form.volumetria.id_for_label }}" class="form-label">Embalagem</label>
-        {{ form.volumetria }}
-    </div>
-    <div class="col-md-12">
         <label for="{{ form.descricao.id_for_label }}" class="form-label">Descrição</label>
         {{ form.descricao }}
     </div>
@@ -28,12 +37,17 @@
         <label for="{{ form.estoque_minimo.id_for_label }}" class="form-label">Estoque Mínimo</label>
         {{ form.estoque_minimo }}
     </div>
-    <div class="col-md-12">
+    <div class="col-md-6">
         <label for="{{ form.id_fornecedor.id_for_label }}" class="form-label">Fornecedor</label>
         {{ form.id_fornecedor }}
     </div>
+    <div class="col-md-6">
+        <label for="{{ form.volumetria.id_for_label }}" class="form-label">Volumetria</label>
+        {{ form.volumetria }}
+    </div>
     <div class="col-12 mt-3">
         <button type="submit" class="btn btn-primary">Salvar</button>
+        <a href="{% url 'produto_list' %}" class="btn btn-secondary">Cancelar</a>
     </div>
 </form>
 {% endblock %}
